<resources>
    <string name="app_name">MIBB</string>

    <!--HINT | Ekran edycji dla "rejestracji" użytkownika-->
    <string name="rejestracja">Rejestracja obserwatora</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="numerTelefonu">Numer kontaktowy</string>
    <string name="email">Adres email</string>
    <string name="wojewodztwo">Województwo</string>
    <string name="powiat">Powiat</string>
    <string name="gmina">Gmina</string>
    <string name="miejscowosc">Miejscowość</string>
    <string name="kodPocztowy">Kod pocztowy</string>
    <string name="nrDomu">Numer domu</string>
    <string name="ulica">Ulica</string>
    <string name="btnZapisz">Zapisz</string>

    <!--HINT | Ekran startowy/menu aplikacji-->
    <string name="menu">Co chcesz zrobić?</string>
    <string name="edytujOperatora">Zmień dane operatora</string>
    <string name="wypelnijFormularz">Wprowadź obserwację</string>
    <string name="przegladHistorii">Przeglądaj złożone obserwacja</string>
    <string name="wyslijFormularz">Wyślij kartę obserwacji</string>

    <!--Napisy na dropsach | Ekran rejestracji karty-->
    <string name="lblDaneOperatora">Imię, nazwisko i adres zamieszkania obserwatora</string>
    <string name="lblMail">e-mail</string>
    <string name="lblNrTel">telefon</string>
    <string name="lblData">Data obserwacji</string>


    <string name="lblNumerKarty">Numer karty</string>
    <string name="btnAnuluj">Anuluj</string>
    <string name="btnDalej">Dalej</string>

    <!--Napisy na dropsach | Ekran dodania obserwacji-->
    <string name="lblNazwaGniazda">Nazwa gniazda</string>
    <string name="lblLokalizacja">Lokalizacja gniazda (miejscowość, ulica i nr domu oraz współrzędne GPS*)</string>
    <string name="btnPobierzLokalizacje">Odczytaj GPS</string>
    <string name="service_not_available">Serwis lokalizacji jest niedostępny</string>
    <string name="invalid_lat_long_used">Błędne wartości lokalizacyjne(szerokość, wysokość)</string>
    <string name="no_address_found">Nie znaleziono adresu</string>
    <string name="address_found">Znaleziono adres</string>
    <string name="no_geocoder_availible">Geocoder jest niedostępny</string>


    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="usytowanie">Usytowanie</string>
    <string name="wprowadz_nazw_drzewa">Wprowadz nazwę drzewa</string>
    <string name="platforma">Platforma</string>
    <string name="stanGniazda">Stan gniazda</string>

    <string-array name="usytuowanieI">
        <item>słup</item>
        <item>drzewo</item>
        <item>dach</item>
        <item>komin</item>
    </string-array>

    <string-array name="uSlupTyp">
        <item>ST - energetyczny</item>
        <item>ST - telefoniczny</item>
        <item>SW - wolnostojący</item>
    </string-array>

    <string-array name="uSlupMaterial">
        <item>B - betonowy</item>
        <item>D - drewniany</item>
    </string-array>

    <string-array name="uSlupKsztalt">
        <item>I - pojedynczy</item>
        <item>II - podwójny</item>
        <item>A - dwa elementy w kształcie litery A</item>
        <item>O - okrągły przekrój</item>
    </string-array>

    <string-array name="uTypDrzewa">
        <item>żywe </item>
        <item>martwe </item>
    </string-array>

    <string-array name="uTypKomina">
        <item>K1 - komin o wysokości do 2 m</item>
        <item>K2 - komin o wysokości powyżej 2 m</item>
    </string-array>

    <string-array name="uTypBudynku">
        <item>BM - mieszkalny</item>
        <item>BO - obora</item>
        <item>BS - stodoła</item>
        <item>BG - nieokreślony</item>
        <item>BP - przemyslowy</item>
        <item>SPOŻ - straży pożarnej</item>
        <item>SZ - szkolny</item>
        <item>SKLEP - sklep</item>
        <item>Inny</item>
    </string-array>

    <string-array name="uGatunekDrzewa">
        <item>dąb</item>>
        <item>buk</item>
        <item>brzoza</item>
        <item>czeremcha</item>
        <item>jabłoń</item>
        <item>jarząb</item>
        <item>jesion</item>
        <item>olsza</item>
        <item>głóg</item>
        <item>grab</item>
        <item>topola</item>
        <item>klon</item>
        <item>lipa</item>
        <item>wierzba</item>
        <item>wiąz</item>
        <item>wiśnia</item>
        <item>sosna</item>
        <item>świerk</item>
        <item>jodła</item>
        <item>modrzew</item>
        <item>cis</item>
        <item>Inne</item>
    </string-array>

    <string-array name="uTypDachu">
        <item>D - dachówka</item>
        <item>B - blacha (w tym blachodachówka)</item>
        <item>E - eternit</item>
        <item>P - papa i pokrycia bitumiczne</item>
        <item>DR - pokrycie drewniane</item>
        <item>S - strzecha</item>
    </string-array>

    <string-array name="platforma">
        <item>PM – platforma metalowa</item>
        <item>PD – platforma drewniana</item>
        <item>PN – platforma nieokreślona</item>
        <item>brak - gniazdo nie jest posadowione na platformiea</item>
    </string-array>

    <string-array name="efektLegu">
        <item>HF - Pusta platforma – potencjalne miejsce gniazdowania w przyszłości, nie mylić z kategorią HO)</item>
        <item>HX - gniazdo istnieje, lecz nie wiadomo czy w ogóle było zajęte</item>
        <item>HO - gniazdo na pewno nie było zajęte (nie mylić z kategorią HF)</item>
        <item>HB1 – gniazdo odwiedzane przez jednego bociana przez 1–4 tygodnie lub nieregularnie przez cały sezon</item>
        <item>HB2 – gniazdo odwiedzane przez dwa bociany przez 1–4 tygodnie lub nieregularnie przez cały sezon</item>
        <item>HBX – gniazdo odwiedzane przez nieznaną liczbę ptaków przez 1–4 tygodnie lub nieregularnie przez cały sezon</item>
        <item>HE - gniazdo zajęte przez jednego bociana nie dłużej niż 4 tygodnie</item>
        <item>HPx - gniazdo zajęte przez parę, ale nie można zdobyć pewnych informacji o efekcie lęgu</item>
        <item>HPo(x) - gniazdo zajęte przez parę ponad miesiąc bez sukcesu lęgowego, ale nie można ustalić czy były złożone jaja, lub czy wykluły się młode)</item>
        <item>HPo(o) - gniazdo zajęte przez parę ponad miesiąc, ale nie zostały złożone jaja)</item>
        <item>HPo(g) - w gnieździe były jaja, lecz z żadnego nie wykluły się młode (np. gniazdo z jajami spadło)</item>
        <item>HPo(m) - gniazdo zajęte przez parę z młodymi, ale wszystkie pisklęta zginęły (np. z po gradobiciu)</item>
        <item>HPmx - stwierdzono obecność młodych zdolnych do wylotu, ale nie można ustalić ich liczby</item>
        <item>(HPm1 -6) - stwierdzono obecność młodych zdolnych do wylotu HPm oraz liczbę młodych</item>
    </string-array>


    <string-array name="stanGniazda">
        <item>budynek lub inna konstrukcja z gniazdem (np. komin) przeznaczone są do rozbiórki, grożą zawaleniem</item>
        <item>gniazdo na słupie energetycznym bez platformy</item>
        <item>przechylony słup z gniazdem</item>
        <item>gniazdo zagrożone przez planowaną inwestycję (remont dachu, budowa drogi, budowa lotniska, itp.)</item>
        <item>w pobliżu niebezpieczny transformator, na którym giną ptaki</item>
        <item>gniazdo konfliktowe (np. posadowione na czynnym kominie;
        ptaki zanieczyszczają odchodami: blaszany dach, ozdobne ogrodzenie, okna, itp.)
    </item>
        <item>gniazdo zbyt dużych rozmiarów – o wysokości powyżej 1 m</item>
        <item>gniazdo przechylone, zagrożone osunięciem</item>
        <item>zły stan techniczny platformy (np. spróchniała)</item>
        <item>niestabilna podstawa gniazda (np. pochylony słup, spróchniałe drzewo, walący się dach
    </item>
        <item>drzewo suche</item>
        <item>gniazdo na drzewie zarośnięte gałęziami utrudniającymi ptakom dolot</item>
        <item>gniazdo posadowione na suchym konarze</item>
        <item>inne – zapisz w uwagach</item>
    </string-array>


    <string name="title_activity_obsluga_mapy">Map</string>
    <string name="efekt_l_gu">Efekt lęgu</string>
    <string name="stan_gniazda">Stan gniazda</string>
    <string name="dobry_brak_zagro_e">dobry</string>
    <string name="z_y_gniazdo_zagro_one">zły</string>
    <string name="obecno_obr_czki">Obecność obrączki</string>
    <string name="brakObraczki">brak</string>
    <string name="jestObraczka">jest</string>
    <string name="uwagi_do_obserwowanego_gniazda">Uwagi do obserwowanego gniazda</string>
    <string name="dodaj_obserwacj">Dodaj obserwację</string>
    <string name="zapisz_obserwacj">Zapisz obserwację</string>
    <string name="mariaDBhostname">jdbc:mysql:localhost/mibb</string>
    <string name="mariaDBuser">root</string>
    <string name="mariaDBpass" />
    <string name="sztuka_1">Sztuka 1</string>
    <string name="sztuka_2">Sztuka 2</string>
    <string name="l_skok">L skok</string>
    <string name="p_gole">P goleń</string>
    <string name="l_gole">L goleń</string>
    <string name="p_skok">P skok</string>
    <string name="poka_na_mapie">Pokaż na mapie</string>
</resources>
